DPO-3702 check actualTime when checking if rows are in the past (#122)